fix overflow

--- a/app/components/bem-blocks/single-product/single-product.scss
+++ b/app/components/bem-blocks/single-product/single-product.scss
@@ -40,7 +40,7 @@
     display: block;
     overflow-y: hidden;
     .product__wrapper {
-      height: calc(100vh - 58px);
+      height: calc(100vh - 158px);
       overflow: hidden;
     }
   }
